--- a/day02p2/deno.json
+++ b/day02p2/deno.json
@@ -3,6 +3,7 @@
     "dev": "deno run --watch main.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@1",
+    "itertools-ts": "npm:itertools-ts@^1.27.1"
   }
 }
